Try 4 to fix font-size on iPhone 4S

--- a/css/style.css
+++ b/css/style.css
@@ -259,9 +259,9 @@ footer h4 {
 	}
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 350px) {
 	a[data-dropdown="drop"] {
-		font-size: 85%;
+		font-size: 75%;
 	}
 }
 
